--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
-
 {
   "functions": {
-    "api/proxy.js": {
+    "api/*.js": {
       "maxDuration": 30
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ]
 }
